--- a/css/resume_copy.css
+++ b/css/resume_copy.css
@@ -7,13 +7,13 @@
 /* 
 
 Colors
-#00c483 - Green
-#191b1b - background Dark
-#fff - heading white
-#969696 - text Dark
-
-#f9a039 - Yellow
-
+00c483 - Green
+191b1b - background Dark
+fff - heading white
+969696 - text Dark
+00c483 - Blue
+f9a039 - Yellow
+343a40 - default text - dark
 
 */
 
@@ -22,6 +22,7 @@ body {
   font-family: 'Muli', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   padding-top: 54px;
   color: #343a40;
+  background-color: #fff;
 }
 
 @media (min-width: 992px) {
@@ -86,7 +87,7 @@ p.lead {
 }
 
 .social-icons a:hover {
-  background-color: #007bff;
+  background-color: #00c483;
 }
 
 .dev-icons {
@@ -94,7 +95,7 @@ p.lead {
 }
 
 .dev-icons .list-inline-item i:hover {
-  color: #007bff;
+  color: #00c483;
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -174,15 +175,15 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #007bff !important;
+  background-color: #00c483 !important;
 }
 
 .text-primary {
-  color: #007bff !important;
+  color: #00c483 !important;
 }
 
 a {
-  color: #007bff;
+  color: #00c483;
 }
 
 a:hover, a:focus, a:active {
