--- a/css/resume_copy.css
+++ b/css/resume_copy.css
@@ -17,6 +17,39 @@ f9a039 - Yellow
 
 */
 
+.skills-btn-look{
+  margin-bottom: 6px;
+  border-radius: 20px!important;
+  background-color: #fff;
+  display: inline-block;
+  font-weight: 400;
+  color: #212529;
+  text-align: center;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid #00c483;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+
+}
+
+.skills-btn-look:hover{
+  margin-bottom: 6px;
+  border-radius: 20px!important;
+  color: #fff;
+  background-color: #00c483;
+  border-color: #28a745;
+
+}
+
+.project-li{
+  list-style-type: disc;
+}
 
 body {
   font-family: 'Muli', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
