--- a/css/resume_copy.css
+++ b/css/resume_copy.css
@@ -51,11 +51,16 @@ f9a039 - Yellow
   list-style-type: disc;
 }
 
+.courses-part,.certifications-part{
+  font-size: 1.3rem;
+}
+
 body {
   font-family: 'Muli', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   padding-top: 54px;
   color: #343a40;
-  background-color: #fff;
+  background-color: #e9ecef;
+  /* #e9ecef!important */
 }
 
 @media (min-width: 992px) {
