--- a/css/resume_copy.css
+++ b/css/resume_copy.css
@@ -14,7 +14,7 @@ fff - heading white
 00c483 - Blue
 f9a039 - Yellow
 343a40 - default text - dark
-
+297bd0 - sidebar-blue
 */
 
 .skills-btn-look{
@@ -30,7 +30,7 @@ f9a039 - Yellow
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  border: 1px solid #00c483;
+  border: 1px solid #297bd0;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
@@ -42,8 +42,8 @@ f9a039 - Yellow
   margin-bottom: 6px;
   border-radius: 20px!important;
   color: #fff;
-  background-color: #00c483;
-  border-color: #28a745;
+  background-color: #297bd0;
+  border-color: #297bd0;
 
 }
 
@@ -71,7 +71,6 @@ body {
 }
 
 h1,
-h2,
 h3,
 h4,
 h5,
@@ -88,6 +87,10 @@ h1 {
 }
 
 h2 {
+  font-family: 'Saira Extra Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #297bd0;
   font-size: 3.5rem;
 }
 
@@ -125,7 +128,7 @@ p.lead {
 }
 
 .social-icons a:hover {
-  background-color: #00c483;
+  background-color: #297bd0;
 }
 
 .dev-icons {
@@ -133,7 +136,7 @@ p.lead {
 }
 
 .dev-icons .list-inline-item i:hover {
-  color: #00c483;
+  color: #297bd0;
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -213,15 +216,15 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #00c483 !important;
+  background-color: #297bd0 !important;
 }
 
 .text-primary {
-  color: #00c483 !important;
+  color: #297bd0 !important;
 }
 
 a {
-  color: #00c483;
+  color: #297bd0;
 }
 
 a:hover, a:focus, a:active {
