--- a/css/resume_copy.css
+++ b/css/resume_copy.css
@@ -55,6 +55,10 @@ f9a039 - Yellow
   font-size: 1.3rem;
 }
 
+.para{
+  font-size: 1.2rem;
+}
+
 body {
   font-family: 'Muli', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   padding-top: 54px;
